--- a/Task_2_4_1/todo.txt
+++ b/Task_2_4_1/todo.txt
@@ -4,3 +4,4 @@ grading: описание grading и ссылка на класс. +
 описание штуки - provider штуки
 // choose between tools ну типа вот снизу
 // для репозитория указывать tools +
+checkpoints parsing and adding and checking and
