--- a/Task_2_4_1/todo.txt
+++ b/Task_2_4_1/todo.txt
@@ -1,8 +1,8 @@
-tool: название тулзы и ссылка на класс +
-условия: описание условий и ссылка на классы что их проверяют +
-grading: описание grading и ссылка на класс. +
-описание штуки - provider штуки
-// choose between tools ну типа вот снизу
-// для репозитория указывать tools +
-checkpoints parsing and adding and checking and
-make checkstyle work
+// студент в отдельную папку + , гит пулл, гит клин -д
+// параметры(путь, имя студента, чекпоинт) указывать в командной строке+
+, много критериев, +
+загрузку файликов относительно курса+
+// в html добавить общий скор и оценку студента +
+// критерии по отдельности, каждый критерий в html. +
+// move build checks to oopcriteria and make it return map (criteria - ok/not ok) +
+// количество passed tests
