teper vse po krasote

--- a/Task_2_4_1/todo.txt
+++ b/Task_2_4_1/todo.txt
@@ -1,4 +1,4 @@
-// студент в отдельную папку + , гит пулл, гит клин -д
+// студент в отдельную папку + , гит пулл, гит клин -д +
 // параметры(путь, имя студента, чекпоинт) указывать в командной строке+
 , много критериев, +
 загрузку файликов относительно курса+
